--- a/style.css
+++ b/style.css
@@ -12,11 +12,12 @@ body {
   margin: 0 auto;
   padding: 0 15px;
 }
+
 /* Navbar Styles */
 .navbar {
   background-color: rgba(13, 71, 161, 0.8);
   color: white;
-  padding: 15px 0;
+  padding: 10px 0;
 }
 
 .navbar .container {
@@ -140,7 +141,7 @@ body {
 
 @keyframes background-animation {
   0% { background-image: url('images/ban1.jpg'); }
-  33% { background-image: url('images/ban4.jpg'); }
+  33% { background-image: url('images/ban2.jpg'); }
   66% { background-image: url('images/ban3.jpg'); }
   100% { background-image: url('images/ban4.jpg'); }
 }
@@ -241,11 +242,29 @@ body {
   text-align: center;
 }
 
-/* Email Section Styles */
-.email-section {
+/* Email Section Styles */.email-section {
   background-color: white;
   padding: 60px 0;
   color: #333;
+}
+
+.responsive-container {
+  max-width: 600px;
+  margin: 20px auto;
+  padding: 15px;
+  background-color: #e3f2fd;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.logo {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.logo img {
+  max-width: 100px;
+  height: auto;
 }
 
 .email-section h2 {
@@ -261,23 +280,67 @@ body {
   text-align: center;
 }
 
-.email-button, .membership-button {
+.email-button , .extra-email-button {
   background-color: #0d47a1;
   color: white;
+  margin: 20px auto 0 auto;  /* Center the button */
   padding: 10px 20px;
   font-weight: bold;
   text-decoration: none;
+  width: fit-content;  /* Adjust width to content */
   border-radius: 5px;
   transition: background-color 0.3s;
+  display: block;  /* Ensures button takes up block space and centers properly */
 }
 
 .email-button:hover, .membership-button:hover {
   background-color: #ff8f00;
 }
 
-.email-button {
-  float: right;
+.extra-email-button:hover{
+  
+  background-color: #6B3B07;
 }
+
+@media (max-width: 600px) {
+  .email-section h2 {
+    font-size: 1.25em;
+  }
+
+  .email-section p {
+    font-size: 0.9em;
+  }
+
+  .email-button {
+    padding: 8px 16px;
+    font-size: 0.9em;
+  }
+  
+  .extra-email-button{
+    padding: 8px 16px;
+    font-size: 0.9em;
+  }
+}
+/* 
+.extra-container {
+  text-align: center;
+  color: #6B3B07;
+}
+
+.extra-main-text {
+ 
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.extra-sub-text {
+  font-size: 28px;
+  margin-bottom: 5px;
+}
+
+.extra-note {
+  font-size: 20px;
+} */
 
 /* Representatives Section Styles */
 .representatives-section {
@@ -337,6 +400,16 @@ body {
   font-size: 18px;
   margin-bottom: 30px;
   color: #333;
+}
+
+.membership-button {
+  background-color: #0d47a1;
+  color: white;
+  padding: 10px 20px;
+  font-weight: bold;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s;
 }
 
 /* Gallery Section Styles */
