--- a/style.css
+++ b/style.css
@@ -618,15 +618,25 @@ animation: background-animation 15s infinite;
 .contact-form {
   max-width: 600px;
   margin: 0 auto;
+  padding: 20px;
+  background-color: white;
+  border: 2px solid #0d47a1; /* Slight dark blue border */
+  border-radius: 8px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); 
 }
 
 .contact-form input,
 .contact-form textarea {
-  width: 100%;
+  width: 96%;
   padding: 10px;
   margin-bottom: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
+}
+.contact-form input:focus,
+.contact-form textarea:focus {
+  outline: none;
+  border-color: #0d47a1; /* Dark blue border on focus */
 }
 
 .contact-form button {
